<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="javacodetest.TestSyncFullscreenActivity">

    <!-- The primary full-screen xx.view. This can be replaced with whatever xx.view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/test_sync_text_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:gravity="left"
        android:keepScreenOn="true"
        android:text="@string/test_sync_text"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/test_sync_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:paddingBottom="100dp"
        android:scrollbars="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/test_sync_controls_1"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#ff888888"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/test_sync_controls_common"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="syncCommon"
                android:text="@string/test_sync_controls_common" />

            <Button
                android:id="@+id/test_sync_controls_sync_method"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="syncMethod"
                android:text="@string/test_sync_controls_sync_method" />

            <Button
                android:id="@+id/test_sync_controls_sync_object"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="syncObject"
                android:text="@string/test_sync_controls_sync_object" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_sync_controls_2"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#ff888888"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/test_sync_controls_sync_class_object"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="syncClassObject"
                android:text="@string/test_sync_controls_sync_class_object" />

            <Button
                android:id="@+id/test_sync_controls_sync_method_and_object"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="syncMethodAndObject"
                android:text="@string/test_sync_controls_sync_method_and_object" />
        </LinearLayout>

    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
